2017-02-25  Eric Herman <eric@freesa.org>

	Add big or little endian support
	fix tests! very broken

	* src/eba.h: add "enum eba_endian"
	* src/eba.c: support endian-ness, consolidate duplication
	* tests/test-get.c: D'oh! over-writing failure; test big endian
	* tests/test-set.c: add big_endian test
	* tests/test-toggle.c: add big_endian test
	* demos/sieve-of-eratosthenes.c: use eba_endian_little
	* Makefile.am: D'oh! used the test-set sources for all tests!
	* misc/pre-tidy.patch: respin for hunk offsets

2017-02-24  Eric Herman <eric@freesa.org>

	use 1U for unsigned int constant used in shifts for clarity
	add "make demo" target for Sieve of Eratosthenes
	improve tests
	tidy comments

	* src/eba.c: factor out sanity checking code; 1U for clarity
	* Makefile.am: make demo
	* tests/test-toggle.c: add test, improve test
	* tests/test-get.c: fix message
	* tests/test-set.c: fix message
	* tests/eba-test-private-utils.h: 2017 copyright
	* tests/echeck.c: 2017 copyright
	* tests/echeck.h: 2017 copyright
	* Makefile.am: example comments
	* .gitignore: sieve-of-eratosthenes
	* ChangeLog: backfill ChangeLog


2017-02-23  Eric Herman <eric@freesa.org>

	add eba_toggle function
	add simple test suite

	* src/eba.h: add eba_toggle
	* src/eba.c: add eba_toggle
	* tests/test-get.c: simple test
	* tests/test-set.c: simple test
	* tests/test-toggle.c: simple test
	* tests/echeck.h: https://github.com/ericherman/libecheck
	* tests/echeck.c: https://github.com/ericherman/libecheck
	* tests/eba-test-private-utils.h: macros for test
	* misc/pre-tidy.patch: respin for alignment
	* Makefile.am: add tests
	* .gitignore: add tests


2017-02-19  Eric Herman <eric@freesa.org>

	use Sieve of Eratosthenes as usage demo
	make safety code optional
	simplify and fold-in eba-log.h to eba.h
	basic autotools building/packaging

	* src/eba.h: improve macros for embedded
	* src/eba.c: re-order, make NULL checks optional
	* src/eba-log.h: fold into eba.h
	* src/eba-log.c: remove